[tool.poetry]
name = "poetry-test"
version = "0.1.0"
description = ""
authors = ["Logvinenko-web <logvinenko.elit@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = {extras = ["all"], version = "^0.63.0"}
SQLAlchemy = "^1.4.13"
alembic = "^1.6.0"
psycopg2 = "^2.8.6"
httpx-oauth = "^0.3.5"
asyncpg = "^0.22.0"
passlib = "^1.7.4"
PyJWT = "^2.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
